--- a/index.html
+++ b/index.html
@@ -1,37 +1,157 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Age Concern Southend</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Age Concern Southend - Charity</title>
+  <!-- Lexend Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@400;700&display=swap" rel="stylesheet">
+  <style>
+    /* Global Reset */
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+    body {
+      font-family: 'Lexend', sans-serif;
+      background-color: #121212;
+      color: #f5f5f5;
+      line-height: 1.6;
+      overflow-x: hidden;
+    }
+    header {
+      padding: 2rem;
+      text-align: center;
+      background: #1e1e1e;
+    }
+    header h1 {
+      font-size: 2.5rem;
+      margin-bottom: 0.5rem;
+      animation: fadeInDown 1s ease-out;
+    }
+    header p {
+      font-size: 1.2rem;
+      margin-bottom: 1rem;
+      animation: fadeIn 1.5s ease-out;
+    }
+    .container {
+      padding: 2rem;
+    }
+    .info-section {
+      margin-bottom: 2rem;
+      animation: fadeIn 2s ease-out;
+    }
+    .info-section h2 {
+      margin-bottom: 1rem;
+      font-size: 2rem;
+      color: #bb86fc;
+    }
+    .info-section p {
+      margin-bottom: 1rem;
+    }
+    .info-section ul {
+      margin-left: 1.5rem;
+      list-style: disc;
+    }
+    .images {
+      display: flex;
+      gap: 1rem;
+      overflow-x: auto;
+      margin-bottom: 2rem;
+      padding-bottom: 1rem;
+    }
+    .images img {
+      width: 300px;
+      height: 200px;
+      object-fit: cover;
+      border-radius: 8px;
+      transition: transform 0.3s ease;
+    }
+    .images img:hover {
+      transform: scale(1.05);
+    }
+    .btn-container {
+      text-align: center;
+      margin-bottom: 2rem;
+    }
+    .btn {
+      display: inline-block;
+      background-color: #bb86fc;
+      color: #121212;
+      padding: 0.8rem 1.5rem;
+      font-size: 1rem;
+      border: none;
+      border-radius: 30px;
+      cursor: pointer;
+      text-decoration: none;
+      transition: background-color 0.3s ease, transform 0.3s ease;
+    }
+    .btn:hover {
+      background-color: #9b66d0;
+      transform: scale(1.05);
+    }
+    footer {
+      background: #1e1e1e;
+      text-align: center;
+      padding: 1rem;
+      font-size: 0.9rem;
+    }
+    /* Animations */
+    @keyframes fadeIn {
+      from { opacity: 0; }
+      to { opacity: 1; }
+    }
+    @keyframes fadeInDown {
+      from {
+        opacity: 0;
+        transform: translateY(-20px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+  </style>
 </head>
 <body>
-    <div class="container">
-        <header>
-            <h1>Welcome to Age Concern Southend</h1>
-            <p>Empowering Our Seniors, Enriching Their Lives</p>
-        </header>
-
-        <section class="about">
-            <h2>About Us</h2>
-            <p>At <strong>Age Concern Southend</strong>, we are committed to supporting and improving the lives of elderly individuals in our community. We provide a range of vital services to help older people maintain their independence, dignity, and overall well-being.</p>
-
-            <h3>Our Services Include:</h3>
-            <ul>
-                <li><strong>Home support</strong> – Helping with household tasks, personal care, and mobility assistance.</li>
-                <li><strong>Social activities</strong> – Organizing events, clubs, and outings to keep older people socially connected.</li>
-                <li><strong>Information and advice</strong> – Providing crucial legal, financial, and health-related advice to navigate aging with confidence.</li>
-                <li><strong>Advocacy</strong> – Representing older people’s rights and ensuring their voices are heard in the community.</li>
-            </ul>
-        </section>
-
-        <section class="cta">
-            <p>Join us in making a difference in the lives of older individuals in Southend.</p>
-            <button id="animatedButton">Learn More</button>
-        </section>
+  <header>
+    <h1>Age Concern Southend</h1>
+    <p>Supporting older people in our community since 1974</p>
+  </header>
+  <div class="container">
+    <section class="info-section">
+      <h2>About Us</h2>
+      <p>Age Concern Southend is a small, independent charity based in Westcliff-on-Sea, Essex. We provide support, advice, and services to older people in the Southend area.</p>
+      <p>Our mission is to help improve quality of life and foster community through various initiatives and services, including befriending, transport assistance, and a specialist dementia day service at our Haven Community Hub.</p>
+    </section>
+    <section class="info-section">
+      <h2>Our Services</h2>
+      <p>We provide:</p>
+      <ul>
+        <li>Telephone and face-to-face befriending services</li>
+        <li>Transport support for appointments and shopping</li>
+        <li>Community clubs and social events</li>
+        <li>Dementia Day Centre sessions for enhanced health and wellbeing</li>
+      </ul>
+    </section>
+    <section class="images">
+      <img src="https://source.unsplash.com/300x200/?charity" alt="Charity Image 1">
+      <img src="https://source.unsplash.com/300x200/?community" alt="Charity Image 2">
+      <img src="https://source.unsplash.com/300x200/?elderly" alt="Charity Image 3">
+    </section>
+    <div class="btn-container">
+      <a class="btn" href="https://www.acsos.co.uk/" target="_blank">Visit Our Website</a>
     </div>
-
-    <script src="script.js"></script>
+  </div>
+  <footer>
+    <p>&copy; 2025 Age Concern Southend. All Rights Reserved.</p>
+  </footer>
+  <script>
+    // JavaScript for future interactions (if needed)
+    document.addEventListener('DOMContentLoaded', function () {
+      console.log('Age Concern Southend website loaded');
+    });
+  </script>
 </body>
 </html>
