--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
   </div>
   <footer>
     <p>&copy; 2025 SB Designs</p>
+    <div id="sfcb2ctz6q4dg93wq843349p27brj7s1btw"></div><script type="text/javascript" src="https://counter6.optistats.ovh/private/counter.js?c=b2ctz6q4dg93wq843349p27brj7s1btw&down=async" async></script><br><a href="https://www.freecounterstat.com">free hit counter</a><noscript><a href="https://www.freecounterstat.com" title="free hit counter"><img src="https://counter6.optistats.ovh/private/freecounterstat.php?c=b2ctz6q4dg93wq843349p27brj7s1btw" border="0" title="free hit counter" alt="free hit counter"></a></noscript>
   </footer>
   <script>
     // JavaScript for future interactions (if needed)
