--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
     </div>
   </div>
   <footer>
-    <p>&copy; 2025 SB Designs</p>
-    <div id="sfcb2ctz6q4dg93wq843349p27brj7s1btw"></div><script type="text/javascript" src="https://counter6.optistats.ovh/private/counter.js?c=b2ctz6q4dg93wq843349p27brj7s1btw&down=async" async></script><br><a href="https://www.freecounterstat.com">free hit counter</a><noscript><a href="https://www.freecounterstat.com" title="free hit counter"><img src="https://counter6.optistats.ovh/private/freecounterstat.php?c=b2ctz6q4dg93wq843349p27brj7s1btw" border="0" title="free hit counter" alt="free hit counter"></a></noscript>
+    <p>&copy; 2025 Sebastian Bhinda - <a href="https://sbdesigns.pages.dev">SB Designs</a></p>
+    <div id="sfc28um5s6e7demr8lh8p2blphjtuztuf8s"></div><script type="text/javascript" src="https://counter6.optistats.ovh/private/counter.js?c=28um5s6e7demr8lh8p2blphjtuztuf8s&down=async" async></script><br><a href="https://www.freecounterstat.com">free website counter</a><noscript><a href="https://www.freecounterstat.com" title="free website counter"><img src="https://counter6.optistats.ovh/private/freecounterstat.php?c=28um5s6e7demr8lh8p2blphjtuztuf8s" border="0" title="free website counter" alt="free website counter"></a></noscript>
   </footer>
   <script>
     // JavaScript for future interactions (if needed)
