--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
   </div>
   <footer>
     <p>&copy; 2025 Sebastian Bhinda - <a href="https://sbdesigns.pages.dev">SB Designs</a></p>
-    <div id="sfc28um5s6e7demr8lh8p2blphjtuztuf8s"></div><script type="text/javascript" src="https://counter6.optistats.ovh/private/counter.js?c=28um5s6e7demr8lh8p2blphjtuztuf8s&down=async" async></script><br><a href="https://www.freecounterstat.com">free website counter</a><noscript><a href="https://www.freecounterstat.com" title="free website counter"><img src="https://counter6.optistats.ovh/private/freecounterstat.php?c=28um5s6e7demr8lh8p2blphjtuztuf8s" border="0" title="free website counter" alt="free website counter"></a></noscript>
+    <div id="sfc28um5s6e7demr8lh8p2blphjtuztuf8s"></div><script type="text/javascript" src="https://counter6.optistats.ovh/private/counter.js?c=28um5s6e7demr8lh8p2blphjtuztuf8s&down=async" async></script><br><noscript><a href="https://www.freecounterstat.com" title="free website counter"><img src="https://counter6.optistats.ovh/private/freecounterstat.php?c=28um5s6e7demr8lh8p2blphjtuztuf8s" border="0" title="free website counter" alt="free website counter"></a></noscript>
   </footer>
   <script>
     // JavaScript for future interactions (if needed)
