--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
   </div>
   <footer>
     <p>&copy; 2025 Sebastian Bhinda - <a href="https://sbdesigns.pages.dev">SB Designs</a></p>
-    <div id="sfchy539czdbzx76mgdstm6swzn3c2ece6w"></div><script type="text/javascript" src="https://counter4.optistats.ovh/private/counter.js?c=hy539czdbzx76mgdstm6swzn3c2ece6w&down=async" async></script><br><a href="https://www.freecounterstat.com">visitors counter</a><noscript><a href="https://www.freecounterstat.com" title="visitors counter"><img src="https://counter4.optistats.ovh/private/freecounterstat.php?c=hy539czdbzx76mgdstm6swzn3c2ece6w" border="0" title="visitors counter" alt="visitors counter"></a></noscript>
+    <script type="text/javascript" src="https://counter.websiteout.com/js/7/0/133/0"></script>
   </footer>
   <script>
     // JavaScript for future interactions (if needed)
